k8s/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: member-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: member-service
  template:
    metadata:
      labels:
        app: member-service
    spec:
      containers:
      - name: member-service
        image: travelnote/member-service:latest
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: member-service
spec:
  selector:
    app: member-service
  ports:
  - port: 8081
    targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trip-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trip-service
  template:
    metadata:
      labels:
        app: trip-service
    spec:
      containers:
      - name: trip-service
        image: travelnote/trip-service:latest
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: trip-service
spec:
  selector:
    app: trip-service
  ports:
  - port: 8082
    targetPort: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traveler-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traveler-service
  template:
    metadata:
      labels:
        app: traveler-service
    spec:
      containers:
      - name: traveler-service
        image: travelnote/traveler-service:latest
        ports:
        - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: traveler-service
spec:
  selector:
    app: traveler-service
  ports:
  - port: 8083
    targetPort: 8083
