k8s/member-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: member-service
spec:
  hosts:
  - member-service
  http:
  - route:
    - destination:
        host: member-service
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: member-service
spec:
  host: member-service
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
