k8s/traveler-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: traveler-service
spec:
  hosts:
  - traveler-service
  http:
  - route:
    - destination:
        host: traveler-service
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: traveler-service
spec:
  host: traveler-service
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
