k8s/trip-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: trip-service
spec:
  hosts:
  - trip-service
  http:
  - route:
    - destination:
        host: trip-service
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: trip-service
spec:
  host: trip-service
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
