k8s/istio-jwt-auth.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: jwt-auth
  namespace: travelnote
spec:
  selector:
    matchLabels:
      app: member-service
  jwtRules:
  - issuer: "travelnote"
    jwksUri: "http://keycloak:8080/realms/travelnote/protocol/openid-connect/certs"
    fromHeaders:
    - name: Authorization
      prefix: "Bearer "
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: require-jwt
  namespace: travelnote
spec:
  selector:
    matchLabels:
      app: member-service
  action: ALLOW
  rules:
  - from:
    - source:
        requestPrincipals: ["travelnote/*"]
    to:
    - operation:
        methods: ["GET", "POST", "PUT", "DELETE"]
        paths: ["/api/members/*"]
